# linc-convert

./: - .wordlist.txt  .dockerignore  .gitignore  .wordlist.txt  Dockerfile  README.md  conda.yaml  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: build-docs.yaml  ci.yml  docker-build.yml  lint.yml  publish-docs.yaml  publish-docs.yml  publishdocs.yaml  ruff-check.yml  ruff.yml  spellcheck.yml
docs/: CNAME  about.md  basic-usage.md  container.md  contribute.md  getting_start.md  index.md  installation.md  mkdocs.yml  psoct_stitching.md  requirements.txt  stitching_artifact_correction_notes.md
docs/img/: linc-convert.drawio
docs/notebooks/: psoct_single_volume_demo.ipynb
docs/scripts/: gen_ref_pages.py
linc_convert/: __init__.py  cli.py
linc_convert/modalities/: __init__.py
linc_convert/modalities/df/: __init__.py  cli.py  multi_slice.py  single_slice.py
linc_convert/modalities/lsm/: __init__.py  cli.py  convert_spool.py  convert_spool_or_zarr.py  convert_tiff_to_zarr.py  coordinates.py  mip.py  mosaic.py  multi_slice.py  pipeline.py  prd.py  preprocess.py  pyramid.py  single_volume.py  spool.py  stitch.py  strip.py  stripe.py  stripes.py  transfer.py
linc_convert/modalities/psoct/: __init__.py  _utils.py  cli.py  exp_dask.py  generate_tile_config.py  mosaic.py  mosaic2d.py  mosaic3d.py  mosaic_complex.py  ms_dask.py  multi_slice.py  placeholder.py  pyramid.py  single_tile.py  single_volume.py  (+4 more)
linc_convert/models/: zarr_config.py
linc_convert/plain/: __init__.py  cli.py  nii2zarr.py  register.py  zarr2nii.py
linc_convert/utils/: __init__.py  chunk_processing.py  custom_math.py  dandifs.py  get_tiff_data.py  j2k.py  logging.py  math.py  nifti_header.py  opener.py  orientation.py  spool.py  stitch.py  unit.py  zarr.py  zarr_config.py
scripts/: debug.py  export_annotation.py  generate_tile_config.py  jp2_to_zarr.py  lsm_tiff_to_zarr.py  oct_mat_to_zarr.py  utils.py  webknossos_annotation.py
scripts/eval/: compare.py  evaluate_stitch.py
scripts/sample/: extract_sample.py
tests/: conftest.py  helper.py  pytest.ini  test_df.py  test_df_multi_slice.py  test_df_single_slice.py  test_lsm.py  test_lsm_mosaic.py  test_lsm_multi_slice.py  test_lsm_prd.py  test_lsm_single_volume.py  test_lsm_spool.py  test_lsm_stitch.py  test_lsm_strip.py  test_oct.py  test_oct_multi_slice.py  test_oct_single_volume.py  test_psoct_mosaic.py  test_psoct_mosaic_complex.py  test_stitch.py  test_utils_stitch.py  test_wk.py
tests/data/: generate.py  generate_trusted_result.py
tests/utils/: compare_file.py  generate_trusted_result.py  helper.py  sample_data.py
(+56 files in other folders)
